; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/pf/extr_pf_table.c_pfr_initialize.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/pf/extr_pf_table.c_pfr_initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@.str = private unnamed_addr constant [17 x i8] c"pf table entries\00", align 1
@UMA_ALIGN_PTR = common dso_local global i32 0, align 4
@V_pfr_kentry_z = common dso_local global i32 0, align 4
@V_pf_limits = common dso_local global %struct.TYPE_2__* null, align 8
@PF_LIMIT_TABLE_ENTRIES = common dso_local global i64 0, align 8
@PFR_KENTRY_HIWAT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pfr_initialize() #0 {
  %1 = load i32, i32* @UMA_ALIGN_PTR, align 4
  %2 = call i32 @uma_zcreate(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 4, i32* null, i32* null, i32* null, i32* null, i32 %1, i32 0)
  store i32 %2, i32* @V_pfr_kentry_z, align 4
  %3 = load i32, i32* @V_pfr_kentry_z, align 4
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @V_pf_limits, align 8
  %5 = load i64, i64* @PF_LIMIT_TABLE_ENTRIES, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i64 %5
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 1
  store i32 %3, i32* %7, align 4
  %8 = load i32, i32* @PFR_KENTRY_HIWAT, align 4
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @V_pf_limits, align 8
  %10 = load i64, i64* @PF_LIMIT_TABLE_ENTRIES, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i64 %10
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i32 %8, i32* %12, align 4
  ret void
}

declare dso_local i32 @uma_zcreate(i8*, i32, i32*, i32*, i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
